--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,5 +1,37 @@
 /*
+=============
+COLORS
+=============
+Blue Primary - #4387FB
+Orange Complimentary - #FFB531
+Light Orange Text - #FFD78E
+Light Blue Text - #97BCFC
+Nav Bkgrd - #C8DDFF
+font dark - #090F18
+*/
 
+
+/*
+  ===================================
+  Body/fonts
+  ===================================
+*/
+
+body {
+  font-family: 'Quicksand', Arial, sans-serif;
+  margin:0 auto;
+  color: #090F18;
+}
+
+div {
+  /*border: 1px solid #ccc;*/
+}
+
+.strong {
+  font-weight: 700;
+}
+
+/*
   ===================================
   Grid
   ===================================
@@ -51,6 +83,30 @@
   ===================================
 */
 
+.navbar {
+  height: 72px;
+  width: 100%;
+  background-color: #C8DDFF;
+}
+
+.navbar h1 {
+  height: 44px;
+  margin:14px 0 10px 160px;
+}
+
+.navbar div {
+  display: inline-block;
+}
+
+#cart-container {
+  float: right;
+  height: 44px;
+  margin:14px 160px 10px 0;
+}
+
+
+
+
 
 
 
@@ -69,6 +125,10 @@
   ===================================
 */
 
+#cart {
+  width:44px;
+  vertical-align: middle;
+}
 
 
 
@@ -78,6 +138,16 @@
   ===================================
 */
 
+a:hover {
+  cursor: pointer;
+  opacity: .7;
+}
+
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
 
 
