--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -23,9 +23,7 @@ body {
   color: #090F18;
 }
 
-div {
-  /*border: 1px solid #ccc;*/
-}
+
 
 .strong {
   font-weight: 700;
@@ -120,19 +118,36 @@ div {
   width: 100%;
   background-color: rgb(205,205,204);
   height: 72px;
+  
 }
 
 .lower-header h2 {
   text-align: center;
+  font-size: 1.7em;
   letter-spacing: .2em;
-  padding-top:20px;
+  margin: 0 auto;
+  padding-top: 20px;
+
+
 }
 
 .shadow {
   text-shadow:3px 2px 2px rgba(0,0,0,0.3);
 }
 
+.line-up {
+  width: 100%;
+  height: 34px;
+  background-color: #A3A3A3;
+  border-top: 1px solid #FFF;
+}
 
+.line-up h3 {
+  margin:0 auto;
+  text-align: center;
+  letter-spacing:.1em;
+  padding-top: 4px;
+}
 
 /*
   ===================================
