--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -180,7 +180,9 @@ body {
   border-bottom: 1px solid #FFF;
 }
 
-
+.icon {
+  width:25px;
+}
 
 
 
@@ -208,3 +210,48 @@ a {
   Footer
   ===================================
 */
+
+.footer-container {
+  position: absolute;
+  width: 100%;
+  height:100px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: rgb(205,205,204);
+}
+
+
+/*
+  ===================================
+  Table (footer)
+  ===================================
+*/
+
+table {
+  text-align: center;
+  margin:0 auto;
+  font-size: 14px;
+}
+
+th {
+  text-align: center;
+  font-weight: 400;
+  padding-right:20px;
+  margin-bottom: 4px;
+}
+
+td {
+  border-collapse: collapse;
+  text-align: left;
+}
+
+td img {
+  vertical-align: middle;
+}
+
+.td-text {
+  padding-left: 10px;
+}
+
