--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -47,28 +47,18 @@ body {
           box-sizing: border-box;
 }
 
-.container,
-.grid {
-  margin: 0 auto;
+.container {
   width: 960px
 }
 
-.container { 
-  padding-left: 30px;
-  padding-right: 30px;
-}
 
-.grid,
-.col-1-3,
-.col-2-3 {
-  padding-left: 15px;
-  padding-right: 15px;
-}
+
 
 .col-1-3,
 .col-2-3 {
   display: inline-block;
   vertical-align: top;
+
 }
 
 .col-1-3 {
@@ -149,13 +139,62 @@ body {
   padding-top: 4px;
 }
 
+
+/*
+  ===================================
+  Inventory Grid
+  ===================================
+*/
+
+.item-container {
+  width: 250px;
+  height:250px;
+  background-color: #090F18;
+  position: relative;
+}
+
+.item-name {
+  color: #FFD78E;
+  text-align: center;
+}
+
+.price  {
+  width: 48px;
+  height: 26px;
+  color: black;
+  background-color: white;
+  border: 2px solid #FFB531;
+  border-radius: 3px;
+  position: relative;
+  left:203px;
+  z-index: 10;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  
+
+}
+
 /*
   ===================================
   Buttons
   ===================================
 */
 
+.btn-add {
+  width: 134px;
+  height: 34px;
+  background-color: #FFB531;
+  display: block;
+  margin: 0 auto;
 
+}
+
+.btn-container {
+  width: 100%;
+  position: relative;
+  bottom: 23px;
+}
 
 
 /*
@@ -182,6 +221,14 @@ body {
 
 .icon {
   width:25px;
+}
+
+.item-image img {
+  width: 250px;
+  height: 167px;
+  background-color: #CCC;
+  position: relative;
+  bottom:25px;
 }
 
 
