--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -146,6 +146,10 @@ body {
   ===================================
 */
 
+.inventory {
+  margin-left:210px;
+}
+
 .item-container {
   width: 250px;
   height:250px;
@@ -259,12 +263,11 @@ a {
 */
 
 .footer-container {
-  position: absolute;
   width: 100%;
   height:100px;
-  right: 0;
+  margin-left: 220;
   bottom: 0;
-  left: 0;
+
   padding: 1rem;
   background-color: rgb(205,205,204);
 }
