--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -23,8 +23,6 @@ body {
   color: #090F18;
 }
 
-
-
 .strong {
   font-weight: 700;
 }
@@ -32,6 +30,8 @@ body {
 .clear {
   clear: both;
 }
+
+
 
 /*
   ===================================
@@ -46,12 +46,6 @@ body {
      -mox-box-sizing: border-box;
           box-sizing: border-box;
 }
-
-.container {
-  width: 960px
-}
-
-
 
 
 .col-1-3,
@@ -146,9 +140,7 @@ body {
   ===================================
 */
 
-.inventory {
-  margin-left:210px;
-}
+
 
 .item-container {
   width: 250px;
@@ -173,10 +165,14 @@ body {
   left:203px;
   z-index: 10;
   text-align: center;
-  font-size: 20px;
+  vertical-align: middle;
+  font-size: 16px;
   font-weight: bold;
-  
+}
 
+.inventory-wrapper .container{
+  width:762px;
+  margin:10px auto;
 }
 
 /*
@@ -197,7 +193,7 @@ body {
 .btn-container {
   width: 100%;
   position: relative;
-  bottom: 23px;
+  bottom: 13px;
 }
 
 
@@ -267,7 +263,6 @@ a {
   height:100px;
   margin-left: 220;
   bottom: 0;
-
   padding: 1rem;
   background-color: rgb(205,205,204);
 }
