--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -103,6 +103,7 @@ body {
   width: 100%;
   background-color: rgb(205,205,204);
   height: 72px;
+
   
 }
 
@@ -125,6 +126,8 @@ body {
   height: 34px;
   background-color: #A3A3A3;
   border-top: 1px solid #FFF;
+  margin-bottom: 62px;
+
 }
 
 .line-up h3 {
