--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -18,7 +18,7 @@ font dark - #090F18
 */
 
 body {
-  font-family: 'Quicksand', Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   margin:0 auto;
   color: #090F18;
 
@@ -74,7 +74,7 @@ body {
   height: 72px;
   width: 100%;
   background-color: rgb(205,205,204);
-  border-bottom: 1px solid #FFF;
+  box-shadow: 0px 1px 1px;
 }
 
 .navbar h1 {
@@ -103,6 +103,7 @@ body {
   width: 100%;
   background-color: rgb(205,205,204);
   height: 72px;
+  box-shadow: 0px -1px 1px;
 
   
 }
@@ -122,11 +123,12 @@ body {
 }
 
 .line-up {
-  width: 100%;
+  width: 960px;
+  margin: 0 auto 4px auto;
   height: 34px;
   background-color: #A3A3A3;
-  border-top: 1px solid #FFF;
-  margin-bottom: 62px;
+  box-shadow: 0px 1px 1px;
+ 
 
 }
 
@@ -134,7 +136,7 @@ body {
   margin:0 auto;
   text-align: center;
   letter-spacing:.1em;
-  padding-top: 4px;
+  padding-top: 6px;
 }
 
 
@@ -156,7 +158,7 @@ body {
 }
 
 .item-name {
-  color: #FFD78E;
+  color: white;
   text-align: center;
 }
 
@@ -174,7 +176,9 @@ body {
   vertical-align: middle;
   font-size: 16px;
   font-weight: bold;
+  box-shadow: 1px 0px 5px;
 }
+
 
 .inventory-wrapper .container {
   width:762px;
@@ -190,10 +194,15 @@ body {
 .btn-add {
   width: 134px;
   height: 34px;
-  background-color: #FFB531;
+  background-color: #CCC;
   display: block;
   margin: 0 auto;
+  font-size: 18px;
 
+}
+
+.btn-add:hover {
+  background-color: #FFF;
 }
 
 .btn-container {
