--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -80,6 +80,7 @@ body {
 .navbar h1 {
   height: 44px;
   margin:14px 0 10px 160px;
+  letter-spacing: .1em;
 }
 
 .navbar div {
@@ -125,7 +126,7 @@ body {
 .line-up {
   width: 960px;
   margin: 0 auto 4px auto;
-  height: 34px;
+  height: 68px;
   background-color: #A3A3A3;
   box-shadow: 0px 1px 1px;
  
@@ -136,7 +137,7 @@ body {
   margin:0 auto;
   text-align: center;
   letter-spacing:.1em;
-  padding-top: 6px;
+  padding-top: 26px;
 }
 
 
@@ -160,6 +161,7 @@ body {
 .item-name {
   color: white;
   text-align: center;
+  padding-top: 2px;
 }
 
 .price  {
@@ -197,7 +199,7 @@ body {
   background-color: #CCC;
   display: block;
   margin: 0 auto;
-  font-size: 18px;
+  font-size: 14px;
 
 }
 
