style item image

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -243,9 +243,11 @@ body {
 .item-image img {
   width: 250px;
   height: 167px;
+  display: block;
   background-color: #CCC;
   position: relative;
   bottom:25px;
+  margin: 0 auto;
 }
 
 
